crates/excelx-derive/tests/ui/unsupported_type.stderr
error: unsupported ExcelRow field type
 --> tests/ui/unsupported_type.rs:6:11
  |
6 |     tags: std::collections::HashMap<String, String>,
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
